--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<title>Anamitra Musib PHP</title>
+<title>Kozhabay Miras</title>
 <h1>Anamitra Musib PHP</h1>
 <p>
 	The SHA256 hash of Anamitra Musib is 3a8a4d70afb7290abdce326e81cb437ab6b4f434e4e5cb63df043e7fbe10ccd7
